--- a/ca/angularjs/index.html
+++ b/ca/angularjs/index.html
@@ -6,7 +6,7 @@
     <link href="css/main.css" rel="stylesheet" />
 
     <!-- Include the AngularJS library -->
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
+    <script src="js/shared/angular-1.7.8/angular.min.js"></script>
   </head>
   <body>
     <div class="header">
