--- a/ca/angularjs/index.html
+++ b/ca/angularjs/index.html
@@ -8,7 +8,7 @@
     <!-- Include the AngularJS library -->
     <script src="js/shared/angular-1.7.8/angular.min.js"></script>
   </head>
-  <body>
+<body ng-app="myApp">
     <div class="header">
       <div class="container">
         <h1>Book End</h1>
