--- a/ca/angularjs/index.html
+++ b/ca/angularjs/index.html
@@ -15,10 +15,10 @@
       </div>
     </div>
 
-    <div class="main">
+    <div class="main" ng-controller="MainController">
       <div class="container">
 
-        <h1>  </h1>
+        <h1> {{ title }} </h1>
 
       </div>
     </div>
